--- a/src/scss/components/_components.scss
+++ b/src/scss/components/_components.scss
@@ -15,6 +15,56 @@
   }
 }
 
+// switch
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 4.5rem;
+  height: 2.55rem;
+}
+
+.switch__checkbox {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.switch__toggle {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-radius: 2.55rem;
+  background: linear-gradient(color(gradientOne), color(gradientTwo));
+  -webkit-transition: $mainTransition;
+  transition: $mainTransition;
+}
+
+.switch__toggle:before {
+  position: absolute;
+  content: "";
+  height: 1.95rem;
+  width: 1.95rem;
+  left: 0.3rem;
+  bottom: 0.3rem;
+  background-color: white;
+  border-radius: 50%;
+  -webkit-transition: $mainTransition;
+  transition: $mainTransition;
+}
+
+.switch__checkbox:checked + .switch__toggle {
+  background-color: pink;
+}
+
+.switch__checkbox:checked + .switch__toggle:before {
+  -webkit-transform: translateX(1.95rem);
+  -ms-transform: translateX(1.95rem);
+  transform: translateX(1.95rem);
+}
+
 // card
 .card {
   color: color(black);
