--- a/src/scss/components/_components.scss
+++ b/src/scss/components/_components.scss
@@ -84,6 +84,10 @@
     transform: scale(1.1);
     z-index: 5;
 
+    @media (max-width: 850px) {
+      transform: scale(1);
+    }
+
     .card__plan,
     .card__price,
     .card__item {
