--- a/src/scss/layout/_layout.scss
+++ b/src/scss/layout/_layout.scss
@@ -10,17 +10,27 @@
   top: 0;
   right: 0;
   width: 30%;
+
+  @media (max-width: 600px) {
+    width: 50%;
+  }
 }
 
 .bg-pattern--bottom {
   bottom: -10%;
   left: 0;
   width: 30%;
+
+  @media (max-width: 600px) {
+    width: 75%;
+  }
 }
 
 // header
 .header {
   @include sectionSpacing;
+  position: relative;
+  z-index: 5;
 
   &__title {
     @include headingStyles;
@@ -37,4 +47,9 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 1rem;
+
+  @media (max-width: 850px) {
+    grid-template-columns: 1fr;
+    gap: 5rem;
+  }
 }
